2004-02-11  Mike Kestner  <mkestner@ximian.com>

	* gtk/*.custom : don't use element_type ctor for GObject lists.

2004-02-11  Mike Kestner  <mkestner@ximian.com>

	* gtk/*.custom : return 0 length arrays, not null.

2004-02-11  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : hide the GList API
	* gtk/*.custom : manually wrap GList api using typed arrays
	* gtk/gtk-api.xml : regen.

2004-02-10  Mike Kestner  <mkestner@ximian.com>

	* gconf/GConf.PropertyEditors/PropertyEditorColorPicker.cs :
	nuke a GnomeSharp.
	* generator/Signal.cs : move eventhandlers and args into the
	base namespace instead of a *Sharp namespace.
	* sample/*.cs : nuke using *Sharp.

2004-02-10  Mike Kestner  <mkestner@ximian.com>

	* art/Art.metadata : mark a field private
	* art/art-api.xml : regen
	* gda/Gda.metadata : mark a few structs opaque
	* gda/gda-api.xml : regen
	* gdk/*.custom : fix changed field names
	* gdk/gdk-api.xml : regen
	* generator/Field.cs : StudlyCase simple typed field names.
	* gnome/Gnome.metadata : mark FontEntry.weight private to
	avoid collision with Weight field. s|//|/api/namespace|g
	* gnome/gnome-api.xml : regen
	* gtk/Gtk.metadata : rename AccelKey.accel_key to key to
	avoid collision with type name.
	* gtk/*.custom : fix changed field names
	* gtk/gtk-api.xml : regen
	* pango/pango-api.xml : regen
	* parser/gapi_pp.pl : add a private_regex to hide BACKEND
	and ENGINE apis, which are by convention private.
	* sample/* : make compile
	* sample/GtkDemo/* : make compile
	* sample/test/* : make compile
	* sources/gtk-sharp-sources.xml : exclude a bunch of pango
	source files.

2004-02-07  Mike Kestner  <mkestner@ximian.com>

	* configure.in : tagged 0.16 and bumped cvs version.

2004-02-07  Mike Kestner  <mkestner@ximian.com>

	* generator/ObjectGen.cs : oops, remove a couple C.WLs.

2004-02-07  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* atk/Makefile.in : fix copy/paste error in --assembly-name.