@@ -13,6 +13,9 @@
   <attr path="/api/namespace/boxed[@cname='GtkTextIter']/method[@name='BackwardToTagToggle']/*/*[@type='GtkTextTag*']" name="null_ok">1</attr>
   <attr path="/api/namespace/boxed[@cname='GtkTextIter']/method[@name='ForwardSearch']/*/*[@type='GtkTextIter*']" name="pass_as">out</attr>
   <attr path="/api/namespace/boxed[@cname='GtkTextIter']/method[@name='ForwardToTagToggle']/*/*[@type='GtkTextTag*']" name="null_ok">1</attr>
+  <attr path="/api/namespace/boxed[@cname='GtkTextIter']/method[@name='GetMarks']" name="hidden">1</attr>
+  <attr path="/api/namespace/boxed[@cname='GtkTextIter']/method[@name='GetTags']" name="hidden">1</attr>
+  <attr path="/api/namespace/boxed[@cname='GtkTextIter']/method[@name='GetToggledTags']" name="hidden">1</attr>
   <attr path="/api/namespace/boxed[@cname='GtkTreePath']/method[@name='GetIndices']" name="hidden">1</attr>
   <attr path="/api/namespace/callback[@cname='GtkClipboardGetFunc']/*/*[@type='GtkSelectionData*']" name="pass_as">ref</attr>
   <attr path="/api/namespace/class[@cname='GtkAccel_']/method[@name='GroupsFromObject']" name="hidden">1</attr>
@@ -23,6 +26,7 @@
   <attr path="/api/namespace/class[@cname='GtkDrag_']/method[@name='SourceSet']/*/*[@name='targets']" name="null_ok">1</attr>
   <attr path="/api/namespace/class[@cname='GtkIdle_']" name="hidden">1</attr>
   <attr path="/api/namespace/class[@cname='GtkStock_']" name="name">StockManager</attr>
+  <attr path="/api/namespace/class[@cname='GtkStock_']/method[@name='ListIds']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkDebugFlag']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkExpanderStyle']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkObjectFlags']" name="hidden">1</attr>
