@@ -1,5 +1,11 @@
 2004-02-11  Mike Kestner  <mkestner@ximian.com>
 
+	* gtk/Gtk.metadata : hide the GSList API
+	* gtk/*.custom : manually wrap GSList api using typed arrays
+	* gtk/gtk-api.xml : regen.
+
+2004-02-11  Mike Kestner  <mkestner@ximian.com>
+
 	* gtk/*.custom : don't use element_type ctor for GObject lists.
 
 2004-02-11  Mike Kestner  <mkestner@ximian.com>
